 * added support for single-line fonts text (based on fonts from QCAD)
 * parallel and distributed processing is configurable in a dialog
 * visualize movements up to safety height properly
 * changed "simulation mode" for visualizing the machine moves
 * added a very simple "pocketing" mode for 2D models
 * added 2D projection of 3D models
 * added toolpath cropping 
 * added toolpath grid pattern: clone a single toolpath in rows and columns
 * added support for DXF features "LWPOLYLINE" and "ARC"
 * added a configuration setting for automatically loading a custom task settings file on startup
 * added a simple "undo" feature for reversing model manipulations
 * GCode features:
  * added basic support for "touch off" and length compensated tool change
  * added a minimum step width for GCode positions to be written
  * GCode positioning precision (number of digits) is configurable
 * enabled drag'n'drop for loading models
 * support non-local file handling (e.g. http, ...)
 * the scroll wheel now behaves similarly to Inkscape's interface (pan and zoom)
 * the default filename extension for exported GCode files is now configurable
 * unify DropCutter behaviour for models that are higher than the defined bounding box
  * always move up to safety height in this case
 * optional visualization of toolpath direction
 * visibility of 3D view items is now configurable in the 3D window
  * via a button and via the context menu
 * improved stability of remote processing: disconnected nodes should not cause problems anymore
 * automatically distributed support bridges can now be placed at corners or edges

Version 0.4.0.1 - 2010-10-24
 * disabled parallel processing for Windows standalone executable
   (a real fix will follow later)

Version 0.4 - 2010-10-19
 * use all available CPU cores for parallel processing
  * this requires at least Python 2.6 or the "python-multiprocessing" package
 * a standalone windows executable is available (experimental)